; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_tda1004x.c_tda1004x_sleep.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_tda1004x.c_tda1004x_sleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.tda1004x_state* }
%struct.tda1004x_state = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@TDA1004X_CONFADC1 = common dso_local global i32 0, align 4
@TDA10046H_CONF_TRISTATE1 = common dso_local global i32 0, align 4
@TDA10046_GP00_I = common dso_local global i32 0, align 4
@TDA10046H_CONF_POLARITY = common dso_local global i32 0, align 4
@TDA1004X_CONFADC2 = common dso_local global i32 0, align 4
@TDA1004X_CONFC4 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*)* @tda1004x_sleep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tda1004x_sleep(%struct.dvb_frontend* %0) #0 {
  %2 = alloca %struct.dvb_frontend*, align 8
  %3 = alloca %struct.tda1004x_state*, align 8
  %4 = alloca i32, align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %2, align 8
  %5 = load %struct.dvb_frontend*, %struct.dvb_frontend** %2, align 8
  %6 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %5, i32 0, i32 0
  %7 = load %struct.tda1004x_state*, %struct.tda1004x_state** %6, align 8
  store %struct.tda1004x_state* %7, %struct.tda1004x_state** %3, align 8
  %8 = load %struct.tda1004x_state*, %struct.tda1004x_state** %3, align 8
  %9 = getelementptr inbounds %struct.tda1004x_state, %struct.tda1004x_state* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  switch i32 %10, label %41 [
    i32 129, label %11
    i32 128, label %15
  ]

11:                                               ; preds = %1
  %12 = load %struct.tda1004x_state*, %struct.tda1004x_state** %3, align 8
  %13 = load i32, i32* @TDA1004X_CONFADC1, align 4
  %14 = call i32 @tda1004x_write_mask(%struct.tda1004x_state* %12, i32 %13, i32 16, i32 16)
  br label %41

15:                                               ; preds = %1
  %16 = load %struct.tda1004x_state*, %struct.tda1004x_state** %3, align 8
  %17 = load i32, i32* @TDA10046H_CONF_TRISTATE1, align 4
  %18 = call i32 @tda1004x_write_byteI(%struct.tda1004x_state* %16, i32 %17, i32 255)
  %19 = load %struct.tda1004x_state*, %struct.tda1004x_state** %3, align 8
  %20 = getelementptr inbounds %struct.tda1004x_state, %struct.tda1004x_state* %19, i32 0, i32 1
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %4, align 4
  %24 = load i32, i32* %4, align 4
  %25 = load i32, i32* @TDA10046_GP00_I, align 4
  %26 = icmp sge i32 %24, %25
  br i1 %26, label %27, label %34

27:                                               ; preds = %15
  %28 = load %struct.tda1004x_state*, %struct.tda1004x_state** %3, align 8
  %29 = load i32, i32* @TDA10046H_CONF_POLARITY, align 4
  %30 = load i32, i32* %4, align 4
  %31 = and i32 %30, 15
  %32 = xor i32 %31, 10
  %33 = call i32 @tda1004x_write_mask(%struct.tda1004x_state* %28, i32 %29, i32 15, i32 %32)
  br label %34

34:                                               ; preds = %27, %15
  %35 = load %struct.tda1004x_state*, %struct.tda1004x_state** %3, align 8
  %36 = load i32, i32* @TDA1004X_CONFADC2, align 4
  %37 = call i32 @tda1004x_write_mask(%struct.tda1004x_state* %35, i32 %36, i32 192, i32 192)
  %38 = load %struct.tda1004x_state*, %struct.tda1004x_state** %3, align 8
  %39 = load i32, i32* @TDA1004X_CONFC4, align 4
  %40 = call i32 @tda1004x_write_mask(%struct.tda1004x_state* %38, i32 %39, i32 1, i32 1)
  br label %41

41:                                               ; preds = %1, %34, %11
  ret i32 0
}

declare dso_local i32 @tda1004x_write_mask(%struct.tda1004x_state*, i32, i32, i32) #1

declare dso_local i32 @tda1004x_write_byteI(%struct.tda1004x_state*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
